# Picasso

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  appGraphColor.cc  appGreedyColor.cc  appNaiveColDir.cc  appPalColDir.cc  appPalColEnc.cc  appPalColEncRecDir.cc  appPalColGpu.cc  appPalColGpuMem.cc  appPalColGpuMemRec.cc  appPalColRecDir.cc  appPaletteColor.cc  appPaletteColorECL.cc  cliqePart.cpp  jsonToMtx.cpp  testGraphIn.cc  testJson.cpp  testJsonGraph.cpp
cmake/: FindColPack.cmake
data/: Ham1_H2O.col  Ham1_H2O.mtx  Ham1_H2O_part.json  Ham_N2O.col  Ham_N2O.json  Ham_N2O_part.json  ccsd_ket_N2O.col  ccsd_ket_N2O_part.json
data/group_results/: Grp_ccsd_H2_631g.json
data/pauli_ket_ccsd_data/: Pauli_ket_ccsd_H6_2D_sto3g.json  Pauli_ket_ccsd_H6_3D_sto3g.json
ecl_graph/: facebook.egr
experimentations/logfiles/: log_cpu_enigma_03_30.csv  log_cpu_enigma_03_30_max_conf.csv  log_cpu_enigma_075_2.csv  log_cpu_enigma_125.csv  log_cpu_enigma_mistaken.csv  log_cpu_res.csv
group_data/: Grp_ccsd_H6_3D_sto3g.json  Grp_ccsd_H6_3D_sto3g_v2.json  test.json
include/: ECLgraph.h
include/ClqPart/: GraphColor.h  JsonGraph.h  Types.h  cuPaletteCol.cuh  graph.h  graphColor.h  greedyColor.h  input.h  paletteCol.h  utility.h
pauli_ket_ccsd_data/: Pauli_ket_ccsd_H4_1D_631g.json  Pauli_ket_ccsd_H6_1D_sto3g.json  Pauli_ket_ccsd_Ham1_H2O.json
src/: CMakeLists.txt  JsonGraph.cc  cuPaletteCol.cu  gen_random_graph.py  graph.cc  graphColor.cc  greedyColor.cc  input.cc  paletteColor.cc  paritionFromColor.py  utility.cc
